fix 1) white spaces in step view, 2) the width of the box and covering of the code, so that the box border doesnt cut the code, 3) smth else little

--- a/war/css/SidebarDark.css
+++ b/war/css/SidebarDark.css
@@ -346,6 +346,11 @@
     border-bottom: 1px solid #6D8A88;
     display: flex;
     padding: 5px 0;
+    max-width: 250px;
+}
+
+.panelSettings .gwt-StackLayoutPanel .gwt-StackLayoutPanelContent tbody tr td{
+    max-width: 250px;
 }
 
 .deleteUserLibraryItem {
